--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.89.0",
     "dotenv": "^17.2.3",
+    "mercadopago": "^2.11.0",
     "next": "16.1.0",
     "react": "19.2.3",
     "react-dom": "19.2.3"
