--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.89.0",
+    "browser-image-compression": "^2.0.2",
     "dotenv": "^17.2.3",
     "mercadopago": "^2.11.0",
     "next": "16.1.0",
