--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
   "dependencies": {
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.89.0",
+    "@types/leaflet": "^1.9.21",
+    "@types/nodemailer": "^7.0.4",
     "browser-image-compression": "^2.0.2",
     "dotenv": "^17.2.3",
+    "leaflet": "^1.9.4",
     "mercadopago": "^2.11.0",
     "next": "16.1.0",
+    "nodemailer": "^7.0.12",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-leaflet": "^5.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
